Changes to pick_word

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1174,11 +1174,8 @@
     "    :return: String of the predicted word\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    #index_of_max_prob = max(enumerate(probabilities), key=lambda p: p[1])\n",
-    "    indices_of_k_max_prob = np.argpartition(probabilities, -BEAM_WINDOW)[-BEAM_WINDOW:]\n",
-    "    random_index = np.random.choice(indices_of_k_max_prob)\n",
-    "    next_word = int_to_vocab[random_index]\n",
-    "    return next_word\n",
+    "    next_word = np.random.choice(list(int_to_vocab.values()), 1, p=probabilities)\n",
+    "    return next_word[0]\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -1200,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1211,17 +1208,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "moe_szyslak:(excited, beat) nobody wants!\n",
-      "marge_simpson: it tastes! take me!\n",
-      "homer_simpson: and i'd like a half stupid flanders with duff!(worried) oh sure.\n",
-      "moe_szyslak: yeah, well, whenever there is this. of you. but would be nice and moe. a lotta have some tab? / am looking a right. with the giant were on a scam. and my once in the air of is so rude.(worried crack)\n",
-      "kent_brockman: don't do anything.\n",
-      "homer_simpson:(noticing something in) hey, moe! it's great. now what have the best label to and my kids his smell goodbye? /(serious) oh i'm the call it a closed.(takes to drink\n",
-      "nobody burns sure!\n",
-      "homer_simpson:(groans,) she must take it! if it sounds... wheeeee moe? homer sucked it?.\n",
-      "lloyd: my undies\" / so i had a huge compliment the springfield isotopes!\n",
-      "barney_gumble: hey moe, you sure any till.\n",
-      "carl_carlson: aw and\n"
+      "moe_szyslak: excuse me, will you?(choked-up knowingly)\n",
+      "carl_carlson: that, who wants a bathtub mint julep?\n",
+      "moe_szyslak: well, if you think we could write the money back?\n",
+      "lenny_leonard: well, well, there's a little trick. i pictured everyone in tin foil at the end of the way, but the secret ingredient dies.\n",
+      "moe_szyslak: now, no. have a happy with my bar, kid. and(amused on) it was, all right, all right! harvard here you go, bowling.\n",
+      "\n",
+      "\n",
+      "homer_simpson: wait, krusty... general!?\n",
+      "moe_szyslak: yeah. i keep meaning to switch leave, but this place up, a little softer. o'reilly.\n",
+      "moe_szyslak: here you go. i've got a picture of you like crap.\n",
+      "carl_carlson: i'll take your money, homer.\n",
+      "\n",
+      "\n",
+      "moe_szyslak: hey! if you guys are getting loaded off your each goodbye.\n",
+      "moe_szyslak: okay, here comes our victim. let's bash his every move a day... so, uh,\n"
      ]
     }
    ],
